--- a/MasterMind/pom.xml
+++ b/MasterMind/pom.xml
@@ -11,5 +11,10 @@
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
   	</dependency>
+  		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.3.5</version>
+		</dependency>
   </dependencies>
 </project>
